--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
   "dependencies": {},
   "devDependencies": {
     "@types/node": "^18.6.3",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "eslint": "^7.32.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^4.1.3",
     "typescript": "^4.7.4"
   }
