--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test:staged": "npm test -- --findRelatedTests"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +19,7 @@
   "homepage": "https://github.com/plinioaugusto/survey-api-clean-architecture#readme",
   "dependencies": {},
   "devDependencies": {
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "eslint": "^7.32.0",
@@ -30,7 +30,10 @@
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^4.1.3",
     "husky": "^8.0.1",
+    "jest": "^28.1.3",
+    "jest-cli": "^28.1.3",
     "lint-staged": "^13.0.3",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   }
 }
