--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,17 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "dist",
     "module": "commonjs",
-    "target": "ES2019",
+    "target": "es2019",
     "esModuleInterop": true,
-    "allowJS": true
-  }
+    "sourceMap": true,
+    "rootDirs": ["src", "tests"],
+    "baseUrl": "src",
+    "paths": {
+      "@/tests/*": ["../tests/*"],
+      "@/*": ["*"]
+    }
+  },
+  "include": ["src", "tests"],
+  "exclude": []
 }
