refactor: :recycle: change scripts and tests files

--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "This API is part of the training of Professor Rodrigo Manguinho (Mango) at Udemy.",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch --passWithNoTests --runInBand --no-cache"
+    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "test:verbose": "jest --passWithNoTests",
+    "test:unit": "npm test -- --watch -c jest-unit-config.js",
+    "test:integration": "npm test -- --watch -c jest-integration-config.js",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage"
   },
   "repository": {
     "type": "git",
