--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "url": "https://github.com/plinioaugusto/survey-api-clean-architecture/issues"
   },
   "homepage": "https://github.com/plinioaugusto/survey-api-clean-architecture#readme",
-  "dependencies": {},
+  "dependencies": {
+    "validator": "^13.7.0"
+  },
   "devDependencies": {
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.3",
+    "@types/validator": "^13.7.4",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "eslint": "^7.32.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
